--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, soluta, harum repellendus blanditiis iusto laborum molestias optio qui nulla veritatis vel molestiae impedit a sed odio suscipit autem sint perspiciatis.
     
 
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet, architecto provident accusamus minima expedita nisi laboriosam eveniet ab nesciunt assumenda optio suscipit laborum quasi ratione dicta numquam debitis omnis possimus.
+    <nav></nav>
 </body>
 </html>
