some changes added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, soluta, harum repellendus blanditiis iusto laborum molestias optio qui nulla veritatis vel molestiae impedit a sed odio suscipit autem sint perspiciatis.
     
 
+    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit exercitationem quaerat quod aspernatur quisquam vero similique dolorem rerum reiciendis sapiente! Eum eos obcaecati voluptatum aliquam enim asperiores ipsa quam perferendis?
    <nav></nav>
 </body>
 </html>
